argocd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mehmet-service
spec:
  selector:
    app: my-dockerhub-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
